<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainDrawer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:gravity="center" />-->


        <Button
            android:id="@+id/btn_hitung"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button"
            android:onClick="kalkulatorBMI"
            android:padding="8dp"
            android:text="Hitung"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_berat" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:onClick="saveBMI"
            android:padding="8dp"
            android:text="Save"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_hitung" />

        <EditText
            android:id="@+id/txt_tinggi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Tinggi Badan (cm)"
            android:inputType="number"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/txt_berat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Berat Badan (kg)"
            android:inputType="number"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tinggi" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="BMI KALKULATOR"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:text="IDEAL"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>


<com.google.android.material.navigation.NavigationView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:itemTextColor="#FFF"
    app:itemIconTint="#FFF"
    app:menu="@menu/fitme_menu"
    android:id="@+id/nav_view_drawer_main"
    android:layout_gravity="start">
</com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>