...
                app:layout_constraintTop_toBottomOf="@+id/textView11" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/selesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="lanjut"
        android:textColor="@color/white"
...
